[gd_scene load_steps=7 format=2]

[ext_resource path="res://img/player_projectile.png" type="Texture" id=1]
[ext_resource path="res://img/projectile.png" type="Texture" id=2]
[ext_resource path="res://code/Projectile.gd" type="Script" id=3]
[ext_resource path="res://scenes/Trail.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 1 )

[node name="Projectile" type="Node2D"]
script = ExtResource( 3 )

[node name="enemy_sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 2 )

[node name="player_sprite" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 1 )

[node name="Trail" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 0 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="current" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="prior" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="rect" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
disabled = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
